# Habit-tracker

./: .env.sample  .flake8  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
config/: __init__.py  celery.py  settings.py  urls.py
habits/: admin.py  auth_views.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_habit_last_completed_at_habit_last_reminded_at_and_more.py
nginx/: default.conf
