[project]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "damodara",email = "jay108@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
